# ensimu.space

./: .env.example  .env.production  .env.production.example  .gitignore  AGENTS.md  COMPREHENSIVE_TEST_REPORT.md  DEPLOYMENT_GUIDE.md  FULL_TESTING_WORKFLOW.md  INTEGRATION_PLAN.md  Makefile  NVIDIA_SETUP_GUIDE.md  README.md  TESTING.md  deploy-production.sh  deploy_production.py  docker-compose.archon.yml  docker-compose.autoscale.yml  docker-compose.production.yml  docker-compose.yml  protocol-standardization.md  quick_validation_test.py  run_all_tests.py
backend/: Dockerfile  Dockerfile.fixed  Dockerfile.production  LANGGRAPH_STATE_PERSISTENCE_IMPLEMENTATION.md  alembic.ini  diagnostic_validation.py  install-minimal.sh  install.sh  integration_test_manual.py  main.py  main_clean.py  main_fixed.py  pyproject.toml  pytest.ini  requirements-clean.txt  requirements-minimal.txt  requirements-prod.txt  requirements.txt  routers.json  run_tests.py  run_unit_tests.py  test_comprehensive_validation.py  test_database_diagnosis.py  test_end_to_end_integration.py  test_langgraph_persistence.py  test_nvidia_api_endpoints.py  test_nvidia_integration.py  test_nvidia_server.py  test_schema_validation.py  test_server.py  test_websocket_system.py  test_workflow_validation.py
backend/alembic/: env.py
backend/app/: __init__.py  simple_auth.py  websocket_manager.py
backend/scripts/: health_check.py  initialize_data.py  start_production.sh
backend/test_db_venv/: pyvenv.cfg
backend/tests/: __init__.py  conftest.py  test_agents.py  test_ai_agents.py  test_api_endpoints.py  (+9 more)
(+102 files in other folders)
