[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ensumu-space-backend"
version = "0.1.0"
description = "EnsumuSpace Backend with CAE Preprocessing"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi==0.115.12",
    "uvicorn[standard]==0.34.2",
    # EnsimuAgent dependencies
    "email-validator>=2.2.0",
    "sqlalchemy>=2.0.0",
    "alembic>=1.13.0",
    "openai",
    "psycopg2-binary>=2.9.10",
    "pydantic>=2.0.0",
    "python-multipart==0.0.9",
    "aiofiles",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "ipykernel==6.29.5",

    "beautifulsoup4",
    "requests",
    "asyncpg",
    "xai-sdk",
    "langgraph",
    "crewai",
    # Python simulation tools
    "foamlib>=0.2.0",
    "pyvista>=0.43.0",
    "pandas>=2.1.0",
    "matplotlib>=3.8.0",
    "plotly>=5.17.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    "vtk>=9.3.0",
    # Agent orchestration
    "langchain>=0.1.0",
    "langchain-openai>=0.0.5",
    # Vector databases
    "chromadb>=0.4.0",
    "sentence-transformers>=2.2.0",
    "nvidia-nccl-cu12>=2.27.3",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
